# ZPR_projekt

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.py  test1.txt  test2.txt  test4.txt  todo.txt
GUI classes/: MainFrame.cpp  MainFrame.h  ProfileDialog.cpp  ProfileDialog.h  StartFrame.cpp  StartFrame.h
classes/: Application.cpp  Application.h  Command.cpp  Command.h  Dir.cpp  Dir.h  Directory.cpp  Directory.h  File.cpp  File.h  FileCommand.cpp  FileCommand.h  FileCommandFactory.cpp  FileCommandFactory.h  LocalDirectory.cpp  LocalDirectory.h  Profile.cpp  Profile.h  Scanner.cpp  Scanner.h  ScannerVisitor.cpp  ScannerVisitor.h  SshConnector.cpp  SshConnector.h  Visitor.h  testedClass.h
code/: testedUnit.cpp
tests/: ApplicationTests.cpp  CMakeLists.txt  DirTests.cpp  ProfileTests.cpp  Tests.cpp  main.cpp
tests/GUITests/: StartFrameTests.cpp
